--- a/html-Personal Site/css/styles.css
+++ b/html-Personal Site/css/styles.css
@@ -6,17 +6,84 @@ body {
     margin: 0%;
     background-color:whitesmoke;
     text-align: center;
+    font-family: 'Merriweather', serif;
+}
+
+h1{
+  font-family: 'Sacramento', cursive;
+  font-size: xx-large;
+}
+
+h2{
+  font-family: 'Montserrat', sans-serif;
+}
+
+h3{
+  font-family: 'Montserrat', sans-serif;
 }
 
 /************ CLASS SELECTORS ***************/
 
-/* This class holds the div which styles the nav-bar pages*/
+.navbar{
+    width: 100%;
+    background-color: black;
+    overflow: auto;
+}
+
+.navbar a{
+    float: left;
+    text-align: center;
+    padding: 12px;
+    color: white;
+    text-decoration: none;
+    font-size: x-large;
+}
+
+.navbar a:hover{
+    background-color: #555;
+}
+
+.navbar a.active {
+    background-color: #4CAF50;
+    color: white;
+} 
+
+.navbar .icon {
+    display: none;
+  }
+  /* When the screen is less than 600 pixels wide, hide all links, 
+  except for the first one ("Home"). Show the link that contains should open and close the navbar (.icon) */
+  @media screen and (max-width: 600px) {
+    .navbar a:not(:first-child) {display: none;}
+    .navbar a.icon {
+      float: right;
+      display: block;
+    }
+  }
+  
+  /*The "responsive" class is added to the navbar with JavaScript when the user clicks on the icon. 
+  This class makes the navbar look good on small screens by displaying the links vertically instead of horizontally) */
+  @media screen and (max-width: 600px) {
+    .navbar.responsive {position: relative;}
+    .navbar.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .navbar.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+  }
+
 
 .bottom-cloud{
     position: absolute;
     width: 10%;
     height: auto;
     margin-left: 15%;
+    margin-top: 4%;
     
 }
 
@@ -27,21 +94,22 @@ h1{
 
 
 .mountain{
-    
-    width: 70%;
+    height: 100%;
+    width: 60%;
 }
+
 
 
 .top-div-home{
     position: relative;
-    padding-top: 0%;
+    margin-top: 5%;
 }
 
 .top-cloud{
     position: absolute;
     width: 10%;
     margin-left: 30%;
-    margin-top: 1%;
+    margin-top: 5%;
  
 }
 
