--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,18 @@ h3{
  
 }
 
+.book-pub{
+  padding-left: 30%;
+  padding-right: 30%;
+  margin-top: 4%;
+  margin-bottom: 4%;
+}
+
+.book-pub a{
+  text-decoration: none;
+  color: #555;
+}
+
 .bottom-div-home{
 
   margin-top: 8%;
@@ -151,6 +163,16 @@ h1{
     width: 60%;
 }
 
+.myBook{
+  width: 40%;
+}
+
+.software-div{
+  padding-left: 30%;
+  padding-right: 30%;
+  padding-top: 4%;
+  padding-bottom: 4%;
+}
 
 
 .top-div-home{
@@ -169,6 +191,13 @@ h1{
     margin-left: 30%;
     margin-top: 5%;
  
+}
+
+.undergrad-uni{
+  padding-left: 30%;
+  padding-right: 30%;
+  padding-top: 4%;
+  padding-bottom: 4%;
 }
 
 
