--- a/css/styles.css
+++ b/css/styles.css
@@ -84,10 +84,61 @@ h3{
 }
 
 
+
 .fit{
   height: 200px;
 }
 
+/* Style inputs */
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #555;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: black;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #555;
+}
+
+/* Style the container/contact section */
+.container {
+  border-radius: 5px;
+  padding: 10px;
+}
+
+/* Create two columns that allows the map and the form to float next to each other */
+.column {
+  float: left;
+  width: 40%;
+  margin-top: 6px;
+  padding: 20px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
 
 .navbar{
     width: 100%;
@@ -172,6 +223,13 @@ h1{
   padding-right: 30%;
   padding-top: 4%;
   padding-bottom: 4%;
+}
+
+.top-contact{
+  text-align: center;
+  margin-top: 5%;
+  margin-left: 30%;
+  margin-right: 30%;
 }
 
 
@@ -283,3 +341,20 @@ h1{
   color: white;
 }
 
+#software{
+  font-family: 'Merriweather';
+  border-collapse: collapse;
+  width: 40%;
+  margin-top: 4%;
+  margin-bottom: 4%;
+}
+
+/* each time the user hovers over a tr, it changes the background colour*/
+#software tr:hover {
+  background-color: #555;}
+
+/* changes the colour of the th to black and the writing to white */
+#software th {
+  background-color: black;
+  color: white;
+}
