--- a/css/styles.css
+++ b/css/styles.css
@@ -1,360 +1,390 @@
-
-/************ Font Styling ***************/
+/******************************************* FONT STYLING ********************************************************/
 
 @import url('https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap');
 
 
-/************ TAG SELECTORS ***************/
+/******************************************* TAG SELECTORS ********************************************************/
 
 
 body {
-    margin: 0%;
-    background-color:white;
-    text-align: center;
-    font-family: 'Merriweather', serif;
+  background-color: white;
+  font-family: 'Merriweather', serif;
+  margin: 0%;
+  text-align: center;
 }
 
-h1{
+h1 {
   font-family: 'Sacramento', cursive;
   font-size: xx-large;
-  
+
 }
 
-h2{
+h2 {
   font-family: 'Montserrat', sans-serif;
 }
 
-h3{
+h3 {
   font-family: 'Montserrat', sans-serif;
 }
 
-/************ CLASS SELECTORS ***************/
-
-.andrew{
-  height: 300px;
-  border-radius: 20%;
- 
-}
-
-.book-pub{
-  padding-left: 30%;
-  padding-right: 30%;
-  margin-top: 4%;
-  margin-bottom: 4%;
-}
-
-.book-pub a{
-  text-decoration: none;
-  color: #555;
-}
-
-.bottom-div-home{
-
-  margin-top: 8%;
-  padding-left: 30%;
-  padding-right: 30%;
-  margin-bottom: 11%
-}
-
-.bottom-div-home a{
-  text-decoration: none;
- color: #555;
+/******************************************* CLASS SELECTORS ********************************************************/
 
 
-}
+/******************************************* universial css ********************************************************/
 
-.bottom-navbar{
-  background-color:black;
-  overflow: hidden;
-  bottom: 0;
-  width: 100%;
-  color: white;
-}
-
-.bottom-navbar a{
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: x-large;
-  color: white;
-}
-
-.bottom-navbar a:hover{
-  background-color: #555;
-}
-
-
-
-.fit{
-  height: 200px;
-}
-
-/* Style inputs */
-input[type=text], select, textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #555;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical;
-}
-
-input[type=submit] {
+.bottom-navbar {
   background-color: black;
+  bottom: 0;
   color: white;
-  padding: 12px 20px;
-  border: none;
-  cursor: pointer;
+  overflow: hidden;
+  width: 100%;
 }
 
-input[type=submit]:hover {
+/* changes the style and look of each social media link */
+.bottom-navbar a {
+  display: inline-block;
+  color: white;
+  font-size: x-large;
+  padding: 14px 16px;
+  text-align: center;
+  text-decoration: none;
+}
+
+.bottom-navbar a:hover {
   background-color: #555;
 }
 
-/* Style the container/contact section */
-.container {
-  border-radius: 5px;
-  padding: 10px;
+.navbar {
+  background-color: black;
+  overflow: auto;
+  width: 100%;
 }
 
-/* Create two columns that allows the map and the form to float next to each other */
-.column {
-  float: left;
-  width: 40%;
-  margin-top: 6px;
-  padding: 20px;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Responsive layout - when the screen is less than 600px wide, the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .column, input[type=submit] {
-    width: 100%;
-    margin-top: 0;
-  }
-}
-
-.navbar{
-    width: 100%;
-    background-color: black;
-    overflow: auto;
-}
 /* gives the design of the nav bar that is situated on the top left of each page*/
-.navbar a{
-    float: left;
-    text-align: center;
-    padding: 12px;
-    color: white;
-    text-decoration: none;
-    font-size: x-large;
+.navbar a {
+  color: white;
+  float: left;
+  font-size: x-large;
+  padding: 12px;
+  text-align: center;
+  text-decoration: none;
 }
 
-.navbar a:hover{
-    background-color: #555;
+.navbar a:hover {
+  background-color: #555;
 }
 
 .navbar .icon {
-    display: none;
-  }
-  /* When the screen is less than 600 pixels wide, hide all links, 
-  except for the first one ("Home"). Show the link that contains should open and close the navbar (.icon) */
-  @media screen and (max-width: 600px) {
-    .navbar a:not(:first-child) {display: none;}
-    .navbar a.icon {
-      float: right;
-      display: block;
-    }
-  }
-  
-  /*The "responsive" class is added to the navbar with JavaScript when the user clicks on the icon. 
-  This class makes the navbar look good on small screens by displaying the links vertically instead of horizontally) */
-  @media screen and (max-width: 600px) {
-    .navbar.responsive {position: relative;}
-    .navbar.responsive .icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .navbar.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-  }
-
-
-.bottom-cloud{
-    position: absolute;
-    width: 10%;
-    height: auto;
-    margin-left: 15%;
-    margin-top: 4%;
-    
+  display: none;
 }
 
-h1{
-    margin-top: 0%;
+/* When the screen is less than 600 pixels wide, hide all links, 
+  except for the first one ("Home"). Show the link that contains should open and close the navbar (.icon) */
+@media screen and (max-width: 600px) {
+  .navbar a:not(:first-child) {
+    display: none;
+  }
 
+  .navbar a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+/*The "responsive" class is added to the navbar with JavaScript when the user clicks on the icon. 
+  This class makes the navbar look good on small screens by displaying the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+  .navbar.responsive {
+    position: relative;
+  }
+
+  .navbar.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .navbar.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+
+
+
+/******************************************* index page ********************************************************/
+.andrew {
+  border-radius: 20%;
+  height: 300px;
+}
+
+.book-pub {
+  margin-bottom: 4%;
+  margin-top: 4%;
+  padding-left: 30%;
+  padding-right: 30%;
+}
+
+.book-pub a {
+  color: #555;
+  text-decoration: none;
+
+}
+
+.bottom-cloud {
+  height: auto;
+  margin-left: 15%;
+  margin-top: 4%;
+  position: absolute;
+  width: 10%;
+}
+
+.bottom-div-home {
+  margin-bottom: 11%;
+  margin-top: 8%;
+  padding-left: 30%;
+  padding-right: 30%;
+}
+
+.bottom-div-home a {
+  color: #555;
+  text-decoration: none;
+}
+
+.fit {
+  height: 200px;
 }
 
 .middle-div-home {
 
   padding-left: 30%;
-  padding-right: 30%
+  padding-right: 30%;
+  position: relative;
 }
 
-.mountain{
-    height: 100%;
-    width: 60%;
+.mountain {
+  height: 100%;
+  width: 60%;
 }
 
-.myBook{
+.myBook {
   width: 40%;
 }
 
-.software-div{
-  padding-left: 30%;
-  padding-right: 30%;
-  padding-top: 4%;
-  padding-bottom: 4%;
-}
-
-.top-contact{
-  text-align: center;
-  margin-top: 5%;
+.top-cloud {
   margin-left: 30%;
-  margin-right: 30%;
+  margin-top: 5%;
+  position: absolute;
+  width: 10%;
 }
 
-
-.top-div-home{
-    position: relative;
-    margin-top: 5%;
-}
-
-.top-div-edu{
+.top-div-home {
+  margin-top: 5%;
   position: relative;
-  margin-top: 4%;
 }
 
-.top-cloud{
-    position: absolute;
-    width: 10%;
-    margin-left: 30%;
-    margin-top: 5%;
- 
-}
 
-.undergrad-uni{
+
+/******************************************* education page ********************************************************/
+
+.software-div {
+  padding-bottom: 4%;
   padding-left: 30%;
   padding-right: 30%;
   padding-top: 4%;
+}
+
+.top-div-edu {
+  margin-top: 4%;
+  position: relative;
+
+}
+
+.undergrad-uni {
   padding-bottom: 4%;
+  padding-left: 30%;
+  padding-right: 30%;
+  padding-top: 4%;
 }
 
 
 
-/************ ID SELECTORS ***************/
+/******************************************* contact page ********************************************************/
 
-
-#teacher{
-  height: 30%;
-  width: 25%;
+/* Create two columns that allows the map and the form to float next to each other */
+.column {
+  float: left;
+  margin-top: 6px;
+  padding: 20px;
+  width: 40%;
 }
+
+
+/* Styles the text input columns on the contact pages*/
+input[type=text],
+select,
+textarea {
+  border: 1px solid #555;
+  margin-bottom: 16px;
+  margin-top: 6px;
+  padding: 12px;
+  resize: vertical;
+  width: 100%;
+}
+
+/* Styles the submit button on the contact page */
+input[type=submit] {
+  background-color: black;
+  border: none;
+  color: white;
+  cursor: pointer;
+  padding: 12px 20px;
+}
+
+/* When the user hovers over the submit button, it changes colour to 
+grey; the same grey used all over the website.*/
+input[type=submit]:hover {
+  background-color: #555;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  clear: both;
+  content: "";
+  display: table;
+}
+
+.top-contact {
+  margin-left: 30%;
+  margin-top: 5%;
+  margin-right: 30%;
+  text-align: center;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+
+  .column,
+  input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
+
+
+
+
+/******************************************* ID SELECTORS ********************************************************/
+
+
+/******************************************* education page ********************************************************/
 
 /*styles the table to have a particular font and width*/
-#masters{
-  font-family: 'Merriweather';
+#masters {
   border-collapse: collapse;
-  width: 40%;
-  margin-top: 4%;
+  font-family: 'Merriweather';
   margin-bottom: 4%;
+  margin-top: 4%;
+  width: 40%;
 }
-
-/* each time the user hovers over a tr, it changes the background colour*/
-#masters tr:hover {
-  background-color: #555;}
 
 /* changes the colour of the th to black and the writing to white */
 #masters th {
   background-color: black;
   color: white;
-}
-
-#year3{
-  font-family: 'Merriweather';
-  border-collapse: collapse;
-  width: 40%;
-  margin-top: 4%;
-  margin-bottom: 4%;
+  padding: 3%;
 }
 
 /* each time the user hovers over a tr, it changes the background colour*/
-#year3 tr:hover {
-  background-color: #555;}
-
-/* changes the colour of the th to black and the writing to white */
-#year3 th {
-  background-color: black;
-  color: white;
+#masters tr:hover {
+  background-color: #555;
 }
 
-#year2{
-  font-family: 'Merriweather';
+#software {
   border-collapse: collapse;
-  width: 40%;
-  margin-top: 4%;
-  margin-bottom: 4%;
-}
-
-/* each time the user hovers over a tr, it changes the background colour*/
-#year2 tr:hover {
-  background-color: #555;}
-
-/* changes the colour of the th to black and the writing to white */
-#year2 th {
-  background-color: black;
-  color: white;
-}
-
-#year1{
   font-family: 'Merriweather';
-  border-collapse: collapse;
-  width: 40%;
-  margin-top: 4%;
   margin-bottom: 4%;
-}
-
-/* each time the user hovers over a tr, it changes the background colour*/
-#year1 tr:hover {
-  background-color: #555;}
-
-/* changes the colour of the th to black and the writing to white */
-#year1 th {
-  background-color: black;
-  color: white;
-}
-
-#software{
-  font-family: 'Merriweather';
-  border-collapse: collapse;
-  width: 40%;
   margin-top: 4%;
-  margin-bottom: 4%;
+  width: 40%;
 }
-
-/* each time the user hovers over a tr, it changes the background colour*/
-#software tr:hover {
-  background-color: #555;}
 
 /* changes the colour of the th to black and the writing to white */
 #software th {
   background-color: black;
   color: white;
+  padding: 3%;
+}
+
+/* each time the user hovers over a tr, it changes the background colour*/
+#software tr:hover {
+  background-color: #555;
+}
+
+#teacher {
+  height: 30%;
+  width: 25%;
+}
+
+#year1 {
+  border-collapse: collapse;
+  font-family: 'Merriweather';
+  margin-bottom: 4%;
+  margin-top: 4%;
+  width: 40%;
+}
+
+/* changes the colour of the th to black and the writing to white */
+#year1 th {
+  background-color: black;
+  color: white;
+  padding: 3%;
+}
+
+/* each time the user hovers over a tr, it changes the background colour*/
+#year1 tr:hover {
+  background-color: #555;
+}
+
+#year2 {
+  border-collapse: collapse;
+  font-family: 'Merriweather';
+  margin-bottom: 4%;
+  margin-top: 4%;
+  width: 40%;
+}
+
+/* changes the colour of the th to black and the writing to white */
+#year2 th {
+  background-color: black;
+  color: white;
+  padding: 3%;
+}
+
+/* each time the user hovers over a tr, it changes the background colour*/
+#year2 tr:hover {
+  background-color: #555;
+}
+
+
+#year3 {
+  border-collapse: collapse;
+  font-family: 'Merriweather';
+  margin-bottom: 4%;
+  margin-top: 4%;
+  width: 40%;
+}
+
+/* changes the colour of the th to black and the writing to white */
+#year3 th {
+  background-color: black;
+  color: white;
+  padding: 3%;
+}
+
+/* each time the user hovers over a tr, it changes the background colour*/
+#year3 tr:hover {
+  background-color: #555;
+
 }
