Top Button, Comments

--- a/css/parsley.css
+++ b/css/parsley.css
@@ -1,3 +1,6 @@
+
+/* Some styling colour changes where made for the parsley. The rest of the css is part of the library*/
+
 input.parsley-success,
 select.parsley-success,
 textarea.parsley-success {
