--- a/css/styles.css
+++ b/css/styles.css
@@ -119,7 +119,7 @@ h3 {
 
 
 /* scroll to top allows users to seemlessly scroll back to the top of the page. It also functions on mobile devices*/
-#scrollToTop{
+#scrollToTop {
   background-color: red;
   border: none;
   border-radius: 10px;
@@ -134,18 +134,18 @@ h3 {
 }
 
 /* when hovered over, the back to top button turns grey*/
-#scrollToTop:hover{
+#scrollToTop:hover {
   background-color: #555;
 }
 
 /* enables the top button to be responsive on mobile and tablet devices*/
 @media screen and (max-width: 600px) {
-  #scrollToTop{
-  display: block;
-  position: relative;
-  margin: 0 auto;
-  right: auto;
-  } 
+  #scrollToTop {
+    display: block;
+    position: relative;
+    margin: 0 auto;
+    right: auto;
+  }
 }
 
 
@@ -339,7 +339,7 @@ h3 {
   margin-top: 10%;
 }
 
-.data-slide iframe{
+.data-slide iframe {
   height: 350px;
   width: 315px;
 }
@@ -373,7 +373,7 @@ h3 {
   padding-left: 30%;
   padding-right: 30%;
   text-align: center;
- 
+
 }
 
 
@@ -381,6 +381,27 @@ h3 {
 
   margin-top: 5%;
 
+}
+
+.webButton {
+  background-color: black;
+  border: none;
+  color: white;
+  font-size: large;
+  cursor: pointer;
+  padding: 12px 20px;
+}
+
+.webButton:hover {
+  background-color: #555;
+}
+
+.webWorker {
+  margin-bottom: 6%;
+  margin-top: 3%;
+  padding-left: 30%;
+  padding-right: 30%;
+  text-align: center;
 }
 
 /* Makes text responsive for mobile devices */
@@ -414,6 +435,13 @@ h3 {
 /* Makes text responsive for mobile devices */
 @media screen and (max-width: 600px) {
   .sql-slide {
+    padding: 7%;
+  }
+}
+
+/* Makes text responsive for mobile devices */
+@media screen and (max-width: 600px) {
+  .webWorker {
     padding: 7%;
   }
 }
@@ -470,7 +498,7 @@ input[type=submit]:hover {
   margin-top: 5%;
   padding-left: 30%;
   padding-right: 30%;
-  
+
 }
 
 
@@ -486,7 +514,7 @@ input[type=submit]:hover {
 
 /* Makes text responsive for mobile devices */
 @media screen and (max-width: 600px) {
-  .container{
+  .container {
     padding: 7%;
   }
 }
@@ -522,7 +550,7 @@ input[type=submit]:hover {
   margin-top: 10%;
 }
 
-#portfolio{
+#portfolio {
   width: 50%;
 }
 
